--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
                          "next":  "16.0.0",
                          "react":  "19.2.0",
                          "react-dom":  "19.2.0",
-                         "zustand":  "^5.0.8"
+                         "zustand":  "^5.0.8",
+                         "axios":  "^1.7.7"
                      },
     "devDependencies":  {
                             "@tailwindcss/postcss":  "^4",
