--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
                          "react":  "19.2.0",
                          "react-dom":  "19.2.0",
                          "zustand":  "^5.0.8",
-                         "axios":  "^1.7.7"
+                         "axios":  "^1.7.7",
+                         "@tanstack/react-query": "^5"
                      },
     "devDependencies":  {
                             "@tailwindcss/postcss":  "^4",
