--- a/package.json
+++ b/package.json
@@ -1,30 +1,43 @@
 {
-    "name":  "my-app",
-    "version":  "0.1.0",
-    "private":  true,
-    "scripts":  {
-                    "dev":  "next dev",
-                    "build":  "next build",
-                    "start":  "next start",
-                    "lint":  "eslint"
-                },
-    "dependencies":  {
-                         "next":  "16.0.0",
-                         "react":  "19.2.0",
-                         "react-dom":  "19.2.0",
-                         "zustand":  "^5.0.8",
-                         "axios":  "^1.7.7",
-                         "@tanstack/react-query": "^5"
-                     },
-    "devDependencies":  {
-                            "@tailwindcss/postcss":  "^4",
-                            "@types/node":  "^20",
-                            "@types/react":  "^19",
-                            "@types/react-dom":  "^19",
-                            "eslint":  "^9",
-                            "eslint-config-next":  "16.0.0",
-                            "tailwindcss":  "^4",
-                            "typescript":  "^5"
-                        }
+  "name": "my-app",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "eslint",
+    "lint:fix": "eslint --fix",
+    "format": "prettier --write .",
+    "prepare": "husky"
+  },
+  "dependencies": {
+    "next": "16.0.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "zustand": "^5.0.8",
+    "axios": "^1.7.7",
+    "@tanstack/react-query": "^5"
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "16.0.0",
+    "tailwindcss": "^4",
+    "typescript": "^5",
+    "husky": "^9",
+    "lint-staged": "^15",
+    "prettier": "^3"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix"
+    ],
+    "*.{js,jsx,ts,tsx,css,md,json,html,yml,yaml}": [
+      "prettier --write"
+    ]
+  }
 }
-
