--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "lint:fix": "eslint --fix",
+    "format": "prettier --write .",
+    "prepare": "husky"
   },
   "dependencies": {
     "next": "16.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "zustand": "^5.0.8"
+    "zustand": "^5.0.8",
+    "axios": "^1.7.7",
+    "@tanstack/react-query": "^5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -22,6 +27,17 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.0",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "husky": "^9",
+    "lint-staged": "^15",
+    "prettier": "^3"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix"
+    ],
+    "*.{js,jsx,ts,tsx,css,md,json,html,yml,yaml}": [
+      "prettier --write"
+    ]
   }
 }
