--- a/.prettierignore
+++ b/.prettierignore
@@ -1,6 +1,11 @@
-.next/
-node_modules/
-coverage/
-build/
-out/
+.next
+node_modules
+package-lock.json
+pnpm-lock.yaml
+yarn.lock
+build
+dist
+coverage
+**/*.snap
+**/*.min.*
 
