--- a/package.json
+++ b/package.json
@@ -16,10 +16,8 @@
     "@tanstack/react-query": "^5",
     "axios": "^1.7.7",
     "next": "16.0.0",
-    "quill": "^1.3.7",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-quill": "^2.0.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
@@ -34,7 +32,7 @@
     "patch-package": "^8.0.1",
     "prettier": "^3",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "5.9.3"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
